<resources>
    <string name="app_name">ChatApp</string>
    <string name="this_is_main_activity">this is main activity</string>
    <string name="need_a_new_account">Need a New Account ?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lapit_chat">Lapit Chat</string>
    <string name="logout">logout</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="loading">Loading...</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT ?</string>
    <string name="login_to_your_account">login to your account</string>
    <string name="requests">REQUESTS</string>
    <string name="chat">CHAT</string>
    <string name="friends">FRIENDS</string>
    <string name="display_name">Display Name</string>
    <string name="avaiable">avaiable</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_status">Your Status</string>
    <string name="select_image">Select Image</string>
    <string name="all_users">All users</string>
    <string name="account_settings">Account Settings</string>
    <string name="name">Name</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="total_friends">Total Friends</string>
    <string name="cancel_friend_request">cancel friend request</string>
    <string name="accept_friend_request">accept friend request</string>
    <string name="remove_this_person">remove this person</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="done_sending_friend_request">done sending request</string>
    <string name="friend_request">Friend Request</string>
    <string name="welcome_to_n_chat_app">welcome to \n chat app</string>
    <string name="toast_image_intent_null">image intent null</string>
    <string name="lbl_set_profile_photo">set profile photo</string>
    <string name="lbl_take_camera_picture">take picture</string>
    <string name="lbl_choose_from_gallery">choose photo from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>


</resources>