<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_fragment_img"
        android:layout_width="@dimen/dim_170dp"
        android:layout_height="@dimen/dim_170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_120dp"
        android:src="@drawable/ic_default" />

    <TextView
        android:id="@+id/settings_fragment_txt_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_fragment_img"
        android:gravity="center"
        android:text="@string/display_name"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/settings_fragment_txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_fragment_txt_display"
        android:layout_marginTop="@dimen/dim_10dp"
        android:gravity="center"
        android:text="@string/avaiable"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_24sp" />

    <Button

        android:id="@+id/settings_fragment_btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_fragment_btn_status"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="9dp"
        android:backgroundTint="@color/white"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/settings_fragment_btn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dim_40dp"
        android:text="@string/change_status" />
</RelativeLayout>