<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragment_rl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:id="@+id/login_fragment_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:textSize="@dimen/txt_24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/dim_20dp"
            android:layout_marginStart="@dimen/dim_20dp"
            android:layout_marginBottom="@dimen/dim_30dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_20dp"
            android:layout_marginEnd="@dimen/dim_20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_20dp"
            android:layout_marginEnd="@dimen/dim_20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_fragment_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/login"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/dim_20dp"
            android:padding="@dimen/dim_10dp"
            />

    </LinearLayout>

</RelativeLayout>