<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_fragment_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/grey">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/profile_fragment_txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dim_10dp"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_24sp" />

                <TextView
                    android:id="@+id/profile_fragment_txt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_fragment_txt_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dim_8dp"
                    android:text="@string/your_status"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_20sp"


                    />

                <TextView
                    android:id="@+id/profile_fragment_txt_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/profile_fragment_btn_send"
                    android:text="@string/total_friends"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_16sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dim_15dp"
                    />

                <Button
                    android:id="@+id/profile_fragment_btn_send"
                    android:layout_width="@dimen/dim_300dp"
                    android:layout_height="@dimen/dim_50dp"
                    android:layout_above="@id/profile_fragment_btn_decline"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dim_20dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/send_friend_request"
                    android:textSize="@dimen/txt_20sp" />

                <Button
                    android:id="@+id/profile_fragment_btn_decline"
                    android:layout_width="@dimen/dim_300dp"
                    android:layout_height="@dimen/dim_50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dim_20dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/decline_friend_request"
                    android:textSize="@dimen/txt_20sp" />


            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>