<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="360dp"
        android:text="@string/welcome_to_n_chat_app"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/start_fragment_btn_sign"
        android:layout_width="195dp"
        android:layout_height="70dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorAccent"
        android:padding="@dimen/dim_10dp"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/start_fragment_btn_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/start_fragment_btn_reg"
        android:layout_width="195dp"
        android:layout_height="70dp"
        android:layout_marginBottom="92dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:padding="@dimen/dim_10dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>